--- a/templates/actor/actor-skills.html
+++ b/templates/actor/actor-skills.html
@@ -17,6 +17,7 @@
         <span class="skillItem">Edit</span>
         <span class="skillItem">Del.</span>
     </div>
+   
 
     {{#each actor.skills as |skill key|}}
 
@@ -44,26 +45,20 @@
     {{#if (compareString skill.name spec.data.parent.value)}}
     <div class="skills-header grid grid-7col">
         <a class="skillSubItem item-descr" data-name="{{skill.name}}" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{spec.name}}</a>
-        <select data-item-id="{{spec._id}}" class="skillItem skill-char" name="spec.data.characteristic.value">
+        <select data-item-id="{{spec._id}}" class="skillItem skill-char">
             {{#select spec.data.characteristic.value}}
-            <option value="ws">WS</option>
-            <option value="bs">BS</option>
-            <option value="s">S</option>
-            <option value="t">T</option>
-            <option value="agi">AGI</option>
-            <option value="int">INT</option>
-            <option value="per">PER</option>
-            <option value="wp">WP</option>
-            <option value="fel">FEL</option>
+            {{#each ../../skillChars}}
+            <option value="{{this.name}}"{{#if (compareString this.name ../spec.data.characteristic.value)}}selected{{/if}}>{{this.caps}}</option>
+            
+            {{/each}}
             {{/select}}
-        </select>
+        </select>   
         <select  data-item-id="{{spec._id}}" class="skillItem skill-adv">
             {{#select spec.data.value}}
-            <option value="-20">Untrained</option>
-            <option value="0">Known</option>
-            <option value="10">Trained</option>
-            <option value="20">Experienced</option>
-            <option value="30">Veteran</option>
+            {{#each ../../skillTraining}}
+        
+            <option value="{{this.value}}"{{#if (compareString this.value ../spec.data.value)}}selected{{/if}}>{{this.name}}</option>
+            {{/each}}
             {{/select}}
         </select>
         <input data-item-id="{{spec._id}}" class="skillItem item-text-input" type="text" data-target="data.mod.value" value="{{spec.data.mod.value}}" data-dtype="Number"/>
@@ -87,25 +82,19 @@
         <a class="skillItem item-descr" data-name="{{skill.name}}" data-item-descr="{{skill.data.description.value}}" title="Skill Use: {{skill.data.skillUse.value}}">{{skill.name}}</a>
         <select  data-item-id="{{skill._id}}" class="skillItem skill-char">
             {{#select skill.data.characteristic.value}}
-            <option value="ws">WS</option>
-            <option value="bs">BS</option>
-            <option value="s">S</option>
-            <option value="t">T</option>
-            <option value="agi">AGI</option>
-            <option value="int">INT</option>
-            <option value="per">PER</option>
-            <option value="wp">WP</option>
-            <option value="fel">FEL</option>
-            {{/select}}
+           {{#each ../skillChars}}
+           <option value="{{this.name}}"{{#if (compareString @key ../skill.data.characteristic.value)}}selected{{/if}}>{{this.caps}}</option>
+            
+            {{/each}}
+           {{/select}}
         </select>
         <select data-item-id="{{skill._id}}" class="skillItem skill-adv">
-            {{#select skill.data.value}}
-            <option value="-20">Untrained</option>
-            <option value="0">Known</option>
-            <option value="10">Trained</option>
-            <option value="20">Experienced</option>
-            <option value="30">Veteran</option>
-            {{/select}}
+           {{#select skill.data.value}}
+            {{#each ../skillTraining}}
+           
+            <option value="{{this.value}}"{{#if (compareString this.value ../skill.data.value)}}selected{{/if}}>{{this.name}}</option>
+            {{/each}}
+           {{/select}}
         </select>
         <input data-item-id="{{skill._id}}" class="skillItem item-text-input" data-target="data.mod.value" type="text" value="{{skill.data.mod.value}}" data-dtype="Number"/>
 
