--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -129,6 +129,14 @@
                     <span>Damage: </span>
                     <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.damageFormula.value}}" data-weapon="{{this._id}}"> {{this.data.damageFormula.value}}</a>
                 </div>
+                {{#if this.flags.specials.force.value}}
+                <div class="list-item">
+                    
+                    <a class="force-roll button" data-label="Force"> Force</a>
+
+
+                </div>
+                {{/if}}
                  <div class="list-item">
                     <span>Reach: {{this.data.range.value}}m</span>
                 </div>
@@ -185,11 +193,25 @@
 
                 </div>
                 
-                
+                {{#if this.flags.specials.force.value}}
+                <div class="list-item">
+                    
+                    <a class="force-roll button" data-label="Force"> Force</a>
+
+
+                </div>
+                {{/if}}
+                {{#if this.flags.specials.maximal.value}}
+                <div class="list-item">
+                    <span>Maximal: <input type="checkbox" class="maximal" data-item-id="{{this._id}}"  {{checked this.flags.specials.maximal.maximal}}></span>
+
+
+                </div>
+                {{/if}}
                 <div class="list-item flexrow">
                     <span>Clip: </span>
 
-                    <input class="clip-current" type="text" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
+                    <input class="item-text-input" type="text" data-target="data.clip.value" value="{{this.data.clip.value}}" name="this.data.clip.value" data-item-id="{{this._id}}" data-dtype="Number">
                     <span> / </span>
                     <span>{{this.data.clip.max}}</span>
 
