--- a/templates/item/item-ammunition-sheet.html
+++ b/templates/item/item-ammunition-sheet.html
@@ -46,9 +46,17 @@
         <div class="flexcol">
             <a class="weapon-special button">Special</a>
         </div>
-        <div class="flexcol">
+         <div class="flexcol">
             <label>Damage Type:</label>
-            <input type="text" value="{{data.damageType.value}}" name="data.damageType.value">
+            <select class="damage-type" name="data.damageType.value">
+                {{#select data.damageType.value}}
+               
+                {{#each item.FORTYK.damageTypes}}
+                {{debug this}}
+                <option value="{{this}}">{{this}}</option>
+                {{/each}}
+                {{/select}}
+            </select>
         </div>
         {{/unless}}
         <div class="flexcol">
